kubernetes/manifests/redis_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: devdb/redis:2.8.19
        name: redis
        command: ["redis-server", "--appendonly", "yes"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
