kubernetes/manifests/swachalit_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swachalit
  labels:
    app: swachalit
    image: swachalit
spec:
  selector:
    matchLabels:
      app: swachalit
  template:
    metadata:
      labels:
        app: swachalit
    spec:
      containers:
      - name: swachalit
        image: null0x001/swachalit:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8800
