kubernetes/manifests/swachalit_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: swachalit
spec:
  selector:
    app: swachalit
  ports:
  - port: 80
    targetPort: 8800
